--- a/code/07/Hristiqn_Zarkov/HM3/index.html
+++ b/code/07/Hristiqn_Zarkov/HM3/index.html
@@ -57,6 +57,7 @@
 						<input id="user" type="text" name="user"/><br>
 						<label for="password">Password:</label>
 						<input id="password" type="password" name="password"/>
+						<input type="submit" name="login" value="LogIn"/>
 					</form>
 				</div>
 				
