--- a/code/07/Hristiqn_Zarkov/HM3/index.html
+++ b/code/07/Hristiqn_Zarkov/HM3/index.html
@@ -22,27 +22,27 @@
 				<h2>Top Players</h2>
 				<div>
 					<table>
-	<tbody><tr><th>#</th><th>Name</th><th>LvL/Res</th><th>Status</th></tr>
-<tr><td>1</td><td><a href="?page=CharacterInfo&amp;CharacterName=Anfields">Anfields</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>2</td><td><a href="?page=CharacterInfo&amp;CharacterName=Aquarium">Aquarium</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>3</td><td><a href="?page=CharacterInfo&amp;CharacterName=Archon">Archon</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>4</td><td><a href="?page=CharacterInfo&amp;CharacterName=BAIMIFAN">BAIMIFAN</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>5</td><td><a href="?page=CharacterInfo&amp;CharacterName=BlaZe">BlaZe</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>6</td><td><a href="?page=CharacterInfo&amp;CharacterName=Brutallus">Brutallus</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>7</td><td><a href="?page=CharacterInfo&amp;CharacterName=Cal!nda!">Cal!nda!</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>8</td><td><a href="?page=CharacterInfo&amp;CharacterName=chaos">chaos</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>9</td><td><a href="?page=CharacterInfo&amp;CharacterName=Deathblood">Deathblood</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>10</td><td><a href="?page=CharacterInfo&amp;CharacterName=DieX">DieX</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>11</td><td><a href="?page=CharacterInfo&amp;CharacterName=guBak">guBak</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>12</td><td><a href="?page=CharacterInfo&amp;CharacterName=hkill">hkill</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>13</td><td><a href="?page=CharacterInfo&amp;CharacterName=-Invisible">-Invisible</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>14</td><td><a href="?page=CharacterInfo&amp;CharacterName=JustKiler">JustKiler</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>15</td><td><a href="?page=CharacterInfo&amp;CharacterName=RaXeL">RaXeL</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>16</td><td><a href="?page=CharacterInfo&amp;CharacterName=Scorp">Scorp</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>17</td><td><a href="?page=CharacterInfo&amp;CharacterName=ThazoR">ThazoR</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>18</td><td><a href="?page=CharacterInfo&amp;CharacterName=TheReaper">TheReaper</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>19</td><td><a href="?page=CharacterInfo&amp;CharacterName=TheTrooper">TheTrooper</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
-<tr><td>20</td><td><a href="?page=CharacterInfo&amp;CharacterName=TRDeLLy">TRDeLLy</a></td><td>350/100</td><td><span class="error">Offline</span></td></tr>
+	<tbody><tr><th>Name</th><th>LvL/Res</th></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Anfields">Anfields</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Aquarium">Aquarium</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Archon">Archon</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=BAIMIFAN">BAIMIFAN</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=BlaZe">BlaZe</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Brutallus">Brutallus</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Cal!nda!">Cal!nda!</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=chaos">chaos</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Deathblood">Deathblood</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=DieX">DieX</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=guBak">guBak</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=hkill">hkill</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=-Invisible">-Invisible</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=JustKiler">JustKiler</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=RaXeL">RaXeL</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=Scorp">Scorp</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=ThazoR">ThazoR</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=TheReaper">TheReaper</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=TheTrooper">TheTrooper</a></td><td>350/100</td></tr>
+<tr><td><a href="?page=CharacterInfo&amp;CharacterName=TRDeLLy">TRDeLLy</a></td><td>350/100</td></tr>
 </table>	</div>
 				
 				<img src="images/content_bottom.png" width="99.9%" height="50px"/>
@@ -57,6 +57,7 @@
 						<input id="user" type="text" name="user"/><br>
 						<label for="password">Password:</label>
 						<input id="password" type="password" name="password"/>
+						<input type="submit" name="login" value="LogIn"/>
 					</form>
 				</div>
 				
