--- a/code/07/Hristiqn_Zarkov/HM3/index.html
+++ b/code/07/Hristiqn_Zarkov/HM3/index.html
@@ -22,7 +22,7 @@
 				<h2>Top Players</h2>
 				<div>
 					<table>
-	<tbody><tr><th>Name</th><th>LvL/Res</th></tr>
+	<tr><th>Name</th><th>LvL/Res</th></tr>
 <tr><td><a href="?page=CharacterInfo&amp;CharacterName=Anfields">Anfields</a></td><td>350/100</td></tr>
 <tr><td><a href="?page=CharacterInfo&amp;CharacterName=Aquarium">Aquarium</a></td><td>350/100</td></tr>
 <tr><td><a href="?page=CharacterInfo&amp;CharacterName=Archon">Archon</a></td><td>350/100</td></tr>
