--- a/code/08/03/index.html
+++ b/code/08/03/index.html
@@ -8,15 +8,26 @@
 		</header>
 		<section>
 			<ol class="list">
-				<li><span class="song">Song1</span ><span></span><span>4.40</span></li>
-				<li><span class="song">Song11</span><span></span><span>5.20</span></li>
-				<li><span class="song">Song111</span><span></span><span>6.20</span></li>
-				<li><span class="song">Song1111</span><span></span><span>3.20</span></li>
-				<li><span class="song">Song11111</span><span></span><span>4.30</span></li>
-				<li><span class="song">Song111111</span><span></span><span>9.80</span></li>
-				<li><span class="song">Song1111111</span><span></span><span>2.00</span></li>
-				<li><span class="song">Song11111111</span><span></span><span>5.50</span></li>
-				<li><span class="song">Song111111111</span><span></span><span>3.30</span></li>
+				<p>AZIS - Ti me razmaza</p>
+				<li>...........................................4.40</li>
+				<p>Song21</p>
+				<li>...........................................4.40</li>
+				<p>SONG31</p>
+				<li>...........................................5.20</li>
+				<p>Song</p>
+				<li>...........................................6.20</li>
+				<p>Song</p>
+				<li>...........................................3.20</li>
+				<p>Song</p>
+				<li>...........................................4.30</li>
+				<p>Song</p>
+				<li>...........................................9.80</li>
+				<p>Song</p>
+				<li>...........................................2.00</li>
+				<p>Song</p>
+				<li>...........................................5.50</li>
+				<p>Song</p>
+				<li>...........................................3.30</li>
 			</ol>
 		</section>
 		<footer>
